# gcp-graphql

./: .gitignore  BUILD_COMPLETE.md  COMMAND_REFERENCE.md  FINAL_SUMMARY.md  PROGRESS.md  QUICKSTART.md  README.md  code_manager.py  config.example.json  config.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
base-images/: README.md  build-all.ps1  build-all.sh
base-images/go-playground/: Dockerfile  cloudbuild.yaml  go.mod  go.sum
base-images/nodejs-playground/: Dockerfile  cloudbuild.yaml  package.json
base-images/python-playground/: Dockerfile  cloudbuild.yaml  requirements.txt
cicd/: README.md  __init__.py  cli.py  trigger_manager.py
core-services/api-gateway/: Dockerfile  README.md  config.json  requirements.txt
core-services/api-gateway/src/: main.py  service_registry.py
deploy/: __init__.py  builder.py  cli.py  config.py  deployer.py  registry.py  runner.py
docs/: COMPLETE_GUIDE.md  SETUP_GUIDE.md
infrastructure/terraform/: README.md  cloudbuild.tf  main.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
services/api-gateway/: Dockerfile  README.md  cloudbuild.yaml  config.json  requirements.txt
services/api-gateway/src/: federation.py  main.py  service_registry.py
shared/python/: requirements.txt  setup.py
shared/python/playground_sdk/: __init__.py  context.py  decorators.py  logging.py  router.py  tracing.py
tools/: create_service.py
tools/templates/nodejs/: README.md  config.json  package.json
tools/templates/python/: Dockerfile  README.md  config.json  requirements.txt
(+3 files in other folders)
