[project]
name = "gcp-graphql-playground"
version = "0.1.0"
description = "GCP Microservices Playground with execution tracing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-run>=0.10.0",
    "google-cloud-build>=3.24.0",
    "google-cloud-artifact-registry>=1.11.0",
    "google-cloud-storage>=2.14.0",
    "google-auth>=2.26.0",
    "gitpython>=3.1.40",
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deploy", "shared.python.playground_sdk"]
